fixed some bugs

--- a/index.html
+++ b/index.html
@@ -213,11 +213,10 @@
     </div>
   </div>
 
-  <header class="header header-style-1">
+  <header id="header" class="header header-style-1" style="display:none;">
     <div class="navigation flex-align">
       <a href="home_1.html" class="logo">
-        <img src="img/logo.png" alt="delice">
-        <img src="img/logo2.png" alt="delice" class="logo-type-2">
+        <img src="images/logotype.svg" alt="delice" height="60">
       </a>
       <div class="burger-menu">
         <i></i>
