logotype height proof

--- a/index.html
+++ b/index.html
@@ -363,7 +363,8 @@
         <div class="keyart_layer parallax" id="keyart-5" data-speed="75"></div>	<!-- 62.5 -->
         <div class="keyart_layer parallax" id="keyart-6" data-speed="87.5"></div>		<!-- 75.0 -->
         <div class="keyart_layer" id="keyart-scrim"></div>
-        <div class="keyart_layer parallax front-layer" id="keyart-7" data-speed="100"></div>		<!-- 87.5 -->
+        <div class="keyart_layer parallax front-layer" id="keyart-7" data-speed="100"></div>
+        <div class="keyart_layer parallax fix-layer" id="keyart-8" data-speed="100"></div>		<!-- 87.5 -->
       </div>
     </section>
 
