--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section" id="trigger">
       <div class="bg auto pos-left-bottom md-hide left-115" id="about-image-1"></div>
       <div class="empty-lg-110 empty-md-100 empty-sm-60 empty-xs-60"></div>
       <div class="empty-lg-100 empty-md-70 empty-sm-0 empty-xs-0"></div>
@@ -2403,7 +2403,11 @@
   <script src="js/jquery.classycountdown.js"></script>
   <script src="js/jarallax.js"></script>
   <script src="js/all.js"></script>
-  <script src="js/parallax.js"></script>
+  <script src="js/ScrollMagic.min.js"></script>
+  <script src="js/debug.addIndicators.min.js"></script>
+  <script src="js/TweenMax.min.js"></script>
+  <script src="js/animation.gsap.min.js"></script> 
+  <script src="js/parallax.js"></script> 
 
 </body>
 
