--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <style id="dynamic-css"></style>
   
   <link rel="stylesheet" href="css/loader.css">
-  <link rel="stylesheet" href="styles.css" />    
+  <link rel="stylesheet" href="styles.css" />  
+  <link href="css/style.css" rel="stylesheet" type="text/css" />    
 </head>
 
 <body class="page-color-style-7 page-style-7">
@@ -355,16 +356,16 @@
 
     <section class="full-height-slider">
       <div class="keyart" id="parallax">
-        <div class="keyart_layer parallax op-4" id="keyart-0" data-speed="12.5"></div>		<!-- 00.0 -->
-        <div class="keyart_layer parallax" id="keyart-1" data-speed="25"></div>	<!-- 12.5 -->
-        <div class="keyart_layer parallax logo-layer" id="keyart-2" data-speed="32.5"></div>		<!-- 25.0 -->
-        <div class="keyart_layer parallax op-4" id="keyart-3" data-speed="50"></div>	<!-- 37.5 -->
-        <div class="keyart_layer parallax" id="keyart-4" data-speed="62.5"></div>		<!-- 50.0 -->
-        <div class="keyart_layer parallax" id="keyart-5" data-speed="75"></div>	<!-- 62.5 -->
-        <div class="keyart_layer parallax" id="keyart-6" data-speed="87.5"></div>		<!-- 75.0 -->
+        <div class="keyart_layer parallax op-4" id="keyart-0" data-speed="2"></div>		<!-- 00.0 -->
+        <div class="keyart_layer parallax" id="keyart-1" data-speed="4"></div>	<!-- 12.5 -->
+        <div class="keyart_layer parallax logo-layer" id="keyart-2" data-speed="11"></div>		<!-- 25.0 -->
+        <div class="keyart_layer parallax op-4" id="keyart-3" data-speed="16"></div>	<!-- 37.5 -->
+        <div class="keyart_layer parallax" id="keyart-4" data-speed="26"></div>		<!-- 50.0 -->
+        <div class="keyart_layer parallax" id="keyart-5" data-speed="36"></div>	<!-- 62.5 -->
+        <div class="keyart_layer parallax" id="keyart-6" data-speed="49"></div>		<!-- 75.0 -->
         <div class="keyart_layer" id="keyart-scrim"></div>
-        <div class="keyart_layer parallax front-layer" id="keyart-7" data-speed="100"></div>
-        <div class="keyart_layer parallax fix-layer" id="keyart-8" data-speed="100"></div>		<!-- 87.5 -->
+        <div class="keyart_layer front-layer" id="keyart-7" data-speed="69"></div>
+        <!-- <div class="keyart_layer parallax fix-layer" id="keyart-8" data-speed="100"></div>		 -->
       </div>
     </section>
 
@@ -405,7 +406,7 @@
       <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
     </section>
 
-    <section class="section">
+    <!-- <section class="section">
       <div class="bg ready data-jarallax" data-jarallax="5" style="background-image: url('images/parallax-bg-1.png')"></div>
       <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
       <div class="empty-md-100 empty-sm-0"></div>
@@ -432,9 +433,9 @@
       </div>
       <div class="empty-md-100 empty-sm-0"></div>
       <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
-    </section>
+    </section> -->
 
-    <section class="section">
+    <!-- <section class="section">
       <div class="bg auto pos-right-bottom md-hide" style="background-image: url(img/home-7/about_image2.png)"></div>
       <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
       <div class="empty-lg-100 empty-md-70 empty-sm-0 empty-xs-0"></div>
@@ -2040,7 +2041,7 @@
         </div>
       </div>
       <div class="empty-sm-60 empty-xs-50"></div>
-    </section>
+    </section> -->
   </div>
 
   <footer class="footer footer-style-1 type-2 page-style-7">
@@ -2292,7 +2293,7 @@
     </div>
   </footer>
 
-  <div class="popup index-popup-gallery">
+  <!-- <div class="popup index-popup-gallery">
     <div class="close-popup">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 21.9 21.9"
         enable-background="new 0 0 21.9 21.9" width="14px" height="14px">
@@ -2377,23 +2378,9 @@
         </svg>
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
-  <link href="css/style.css" rel="stylesheet" type="text/css" />
-
-  <script>
-    function MessageForm4() {
-      $.ajax({
-        type: 'POST', url: 'messageForm4.php', data: $('#messageForm4').serialize(), success: function (response) {
-          $('.submit').html('send');
-          $('#messageForm4')[0].reset();
-        }
-      });
-      return false;
-    }
-  </script>
-
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css"> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
