Logo loader added | New section added | Colors Palette change

--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
   <link href="css/style.css" rel="stylesheet" type="text/css" />    
 </head>
 
-<body class="page-color-style-7 page-style-7">
+<body class="page-color-style-7 page-style-7" id="skrollr-body">
 
   <div class="preloader">
-    <div class="spinner selected">
-      <div class="dot1"></div>
-      <div class="dot2"></div>
-    </div>
+    <img class="loader" src="images/loader.svg" alt="loader">
   </div>
 
   <header id="header" class="header header-style-1 container" style="display:none;">
@@ -180,170 +177,19 @@
           <nav>
             <ul class="header-menu">
               <li class="active">
-                <a href="home_1.html">Home
-                  <img src="img/down-arrow.png" alt="" class="menu-arr">
-                </a>
-                <ul>
-                  <li>
-                    <a href="home_1.html">Home 1</a>
-                  </li>
-                  <li>
-                    <a href="home_2.html">Home 2</a>
-                  </li>
-                  <li>
-                    <a href="home_3.html">Home 3</a>
-                  </li>
-                  <li>
-                    <a href="home_4.html">Home 4</a>
-                  </li>
-                  <li>
-                    <a href="home_5.html">Home 5</a>
-                  </li>
-                  <li>
-                    <a href="home_6.html">Home 6</a>
-                  </li>
-                  <li>
-                    <a href="home_7.html">Home 7</a>
-                  </li>
-                  <li>
-                    <a href="home_8.html">Home 8</a>
-                  </li>
-                  <li>
-                    <a href="home_9.html">Home 9</a>
-                  </li>
-                </ul>
+                <a href="home_1.html">Home</a>
               </li>
               <li>
-                <a href="about.html">About</a>
+                <a href="about.html">Historia</a>
               </li>
               <li>
-                <a href="shop-1.html">Shop
-                  <img src="img/down-arrow.png" alt="" class="menu-arr">
-                </a>
-                <ul>
-                  <li>
-                    <a href="shop-1.html">Shop 1</a>
-                  </li>
-                  <li>
-                    <a href="shop-2.html">Shop 2</a>
-                  </li>
-                  <li>
-                    <a href="shop-3.html">Shop 3</a>
-                  </li>
-                  <li>
-                    <a href="shop-detail-1.html">Shop Detail
-                      <img src="img/down-arrow.png" alt="" class="menu-arr">
-                    </a>
-                    <ul>
-                      <li>
-                        <a href="shop-detail-1.html">Shop Detail 1</a>
-                      </li>
-                      <li>
-                        <a href="shop-detail-2.html">Shop Detail 2</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="checkout-1.html">Order
-                      <img src="img/down-arrow.png" alt="" class="menu-arr">
-                    </a>
-                    <ul>
-                      <li>
-                        <a href="checkout-1.html">Checkout 1</a>
-                      </li>
-                      <li>
-                        <a href="checkout-2.html">Checkout 2</a>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
+                <a href="about.html">Nuestro Proceso</a>
               </li>
               <li>
-                <a href="reservation.html">Page
-                  <img src="img/down-arrow.png" alt="" class="menu-arr">
-                </a>
-                <ul>
-                  <li>
-                    <a href="reservation.html">Reservation</a>
-                  </li>
-                  <li>
-                    <a href="services.html">Services</a>
-                  </li>
-                  <li>
-                    <a href="team.html">Chefs</a>
-                  </li>
-                  <li>
-                    <a href="menu-1.html">Menu
-                      <img src="img/down-arrow.png" alt="" class="menu-arr">
-                    </a>
-                    <ul>
-                      <li>
-                        <a href="menu-1.html">Menu 1</a>
-                      </li>
-                      <li>
-                        <a href="menu-2.html">Menu 2</a>
-                      </li>
-                      <li>
-                        <a href="menu-3.html">Menu 3</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="gallery-1.html">Gallery
-                      <img src="img/down-arrow.png" alt="" class="menu-arr">
-                    </a>
-                    <ul>
-                      <li>
-                        <a href="gallery-1.html">Dessert</a>
-                      </li>
-                      <li>
-                        <a href="gallery-2.html">Breakfast</a>
-                      </li>
-                    </ul>
-                  </li>
-                  <li>
-                    <a href="coming-soon.html">Coming soon</a>
-                  </li>
-                </ul>
+                <a href="about.html">Vive Mezcal</a>
               </li>
               <li>
-                <a href="blog-1.html">Blog
-                  <img src="img/down-arrow.png" alt="" class="menu-arr">
-                </a>
-                <ul>
-                  <li>
-                    <a href="blog-1.html">Blog 1</a>
-                  </li>
-                  <li>
-                    <a href="blog-2.html">Blog 2</a>
-                  </li>
-                  <li>
-                    <a href="blog-detail-1.html">Blog Detail
-                      <img src="img/down-arrow.png" alt="" class="menu-arr">
-                    </a>
-                    <ul>
-                      <li>
-                        <a href="blog-detail-1.html">Blog Detail 1</a>
-                      </li>
-                      <li>
-                        <a href="blog-detail-2.html">Blog Detail 2</a>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="contact-1.html">Contact
-                  <img src="img/down-arrow.png" alt="" class="menu-arr">
-                </a>
-                <ul>
-                  <li>
-                    <a href="contact-1.html">Contact 1</a>
-                  </li>
-                  <li>
-                    <a href="contact-2.html">Contact 2</a>
-                  </li>
-                </ul>
+                <a href="about.html">Mixología</a>
               </li>
             </ul>
           </nav>
@@ -356,47 +202,49 @@
 
     <section class="full-height-slider">
       <div class="keyart" id="parallax">
-        <div class="keyart_layer parallax op-4" id="keyart-0" data-speed="2"></div>		<!-- 00.0 -->
-        <div class="keyart_layer parallax" id="keyart-1" data-speed="4"></div>	<!-- 12.5 -->
+        <div class="keyart_layer parallax" id="keyart-0" data-speed="2"></div>		<!-- 00.0 -->
+        <div class="keyart_layer parallax" id="keyart-1" data-speed="22"></div>	<!-- 12.5 -->
         <div class="keyart_layer parallax logo-layer" id="keyart-2" data-speed="11"></div>		<!-- 25.0 -->
-        <div class="keyart_layer parallax op-4" id="keyart-3" data-speed="16"></div>	<!-- 37.5 -->
-        <div class="keyart_layer parallax" id="keyart-4" data-speed="26"></div>		<!-- 50.0 -->
-        <div class="keyart_layer parallax" id="keyart-5" data-speed="36"></div>	<!-- 62.5 -->
-        <div class="keyart_layer parallax" id="keyart-6" data-speed="49"></div>		<!-- 75.0 -->
-        <div class="keyart_layer" id="keyart-scrim"></div>
-        <div class="keyart_layer front-layer" id="keyart-7" data-speed="69"></div>
+        <div class="keyart_layer parallax" id="keyart-3" data-speed="36"></div>	<!-- 37.5 -->
+        <div class="keyart_layer parallax" id="keyart-4" data-speed="46"></div>		<!-- 50.0 -->
+        <div class="keyart_layer parallax" id="keyart-5" data-speed="56"></div>	<!-- 62.5 -->
+        <div class="keyart_layer parallax" id="keyart-6" data-speed="69"></div>		<!-- 75.0 -->
+        <div class="keyart_layer front-layer" id="keyart-7" data-speed="79"></div>
         <!-- <div class="keyart_layer parallax fix-layer" id="keyart-8" data-speed="100"></div>		 -->
       </div>
     </section>
 
     <section class="section" id="trigger">
       <div class="bg auto pos-left-bottom md-hide left-115" id="about-image-1"></div>
-      <div class="empty-lg-110 empty-md-100 empty-sm-60 empty-xs-60"></div>
-      <div class="empty-lg-100 empty-md-70 empty-sm-0 empty-xs-0"></div>
       <div class="container">
         <div class="row item-animation scroll-type-1">
           <div class="col-md-6 col-md-offset-6 col-xs-12">
             <div class="simple-text text-center color-type-2">
-              <div class="sub-title main-col">Something interesting from</div>
+              <div class="sub-title main-col">Vive Mezcal</div>
               <div class="empty-sm-15 empty-xs-10"></div>
-              <h2 class="h2 tt title">Our Head Chef</h2>
+              <h2 class="h2 tt title">Vive la leyenda</h2>
               <div class="empty-sm-15 empty-xs-10"></div>
-              <span class="h5 color-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</span>
+              <span class="h5 color-2">Rendimos culto a la naturaleza que nos rodea y a las enseñanzas de nuestros ancestros a través del mezcal</span>
             </div>
             <div class="empty-sm-70 empty-xs-40"></div>
             <div class="q-text">
               <div class="qq">“</div>
-              <h4 class="h4 caption tt color-2">Greetings & Come on in!</h4>
+              <h4 class="h4 caption tt color-2">Con el aroma de nuestras tierras</h4>
               <div class="empty-sm-15 empty-xs-15"></div>
               <div class="simple-text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                  commodo consequat.</p>
+                <p>Producimos mezcal 100% agave joven utilizando las sabias costumbres de nuestros ancestros, obteniendo un producto de excelencia y calidad que complazca los paladares más exigentes. Fomentando las costumbres y tradiciones de nuestro estado.</p>
               </div>
               <div class="empty-sm-20 empty-xs-15"></div>
-              <h5 class="h5 sm caption">Antony Foster Jr.</h5>
+              <h5 class="h5 sm caption">Francisco Camacho</h5>
               <div class="simple-text sm">
-                <p>Head Chef</p>
+                <p>Maestro Mezcalero</p>
+                  <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                    <path style="fill: none;stroke: rgb(255, 255, 255);stroke-width: 3;position: fixed;stroke-linecap: round;stroke-linejoin: miter;stroke-miterlimit: 4;stroke-opacity: 1;stroke-dasharray: 6000;stroke-dashoffset: 3070;" data-bottom-center="stroke-dashoffset:6000;" data-top-center="stroke-dashoffset:0;" class="skrollable skrollable-between"
+                    d="M188.7,96.9l37.6-48.2c10.1-13.4,11.8-27-7.5-8.7l-68.4,62.3c-26.4,30.3-4.2,40,39.2,27.8 M257.2,126.1
+	c-44.9-20.8-140.6-41.2-215.8-52.7c-19.5-1.1-3.1,7.4,3.2,9.3c14.4,4.3,58.4,14.6,58.4,14.6c19.3,5,12.9,30.7,7.5,42.4
+	c0,0,42.6-56,54.5-76.2c4.4-7.6,15-31.7,15-31.7c5.1-14.8,4.2-26-8.9-10c-6.4,7.7-9.6,15.7-9.6,23.9c0.9,13.5,19.9,25.7,41.7,37.4
+	l11.4,6.1C149.2,77.8,38.7,21.3,58.9,46.3c12,14.9,116.8,23.9,116.8,23.9"></path>
+                  </svg>
               </div>
             </div>
           </div>
@@ -406,8 +254,8 @@
       <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
     </section>
 
-    <!-- <section class="section">
-      <div class="bg ready data-jarallax" data-jarallax="5" style="background-image: url('images/parallax-bg-1.png')"></div>
+    <section class="section">
+      <div class="bg ready data-jarallax" data-jarallax="5" style="background-image: url('images/parallax-bg-1.png')"><div class="black-overlay"></div></div>
       <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
       <div class="empty-md-100 empty-sm-0"></div>
       <div class="container">
@@ -416,7 +264,7 @@
             <div class="simple-text text-center color-type-1">
               <div class="sub-title main-col">Always fresh ingredients</div>
               <div class="empty-sm-15 empty-xs-10"></div>
-              <h2 class="h2 tt title">FOR THE BEST RECIPES</h2>
+              <h2 class="h2 tt title">Para el mejor paladar</h2>
               <div class="empty-sm-10 empty-xs-10"></div>
               <div class="col-md-6 col-md-offset-3 col-sm-12">
                 <div class="simple-text md">
@@ -433,7 +281,7 @@
       </div>
       <div class="empty-md-100 empty-sm-0"></div>
       <div class="empty-lg-140 empty-md-100 empty-sm-60 empty-xs-60"></div>
-    </section> -->
+    </section>
 
     <!-- <section class="section">
       <div class="bg auto pos-right-bottom md-hide" style="background-image: url(img/home-7/about_image2.png)"></div>
@@ -2395,6 +2243,10 @@
   <script src="js/TweenMax.min.js"></script>
   <script src="js/animation.gsap.min.js"></script> 
   <script src="js/parallax.js"></script> 
+  <script type="text/javascript" src="http://prinzhorn.github.io/skrollr/dist/skrollr.min.js"></script>
+  <script type="text/javascript">
+    skrollr.init();
+  </script>
 
 </body>
 
