--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
   <meta name="format-detection" />
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="images/favicon.png" />
   <title>Cuero Viejo | Mezcal</title>
   <style id="dynamic-css"></style>
 
