--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body class="page-color-style-7 page-style-7" id="skrollr-body">
+<body class="page-color-style-7 page-style-7">
 
   <div class="preloader">
     <img class="loader" src="images/loader.svg" alt="loader">
@@ -497,7 +497,9 @@
     <script src="js/animation.gsap.min.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/skrollr.min.js"></script>
-    <script>skrollr.init();</script>
+    <script>if(window.innerWidth > 720){
+      skrollr.init();
+    };</script>
 
 </body>
 
