--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img class="loader" src="images/loader.svg" alt="loader">
   </div>
 
-  <header id="header" class="header header-style-1 container" style="display:none;">
+  <header main="true" id="header" class="header header-style-1 container" style="display:none;">
     <div class="navigation flex-align">
       <a href="#" class="logo">
         <img src="images/logotype.svg" alt="Cuero Viejo" height="60">
@@ -33,7 +33,7 @@
         <div class="nav-align-wrap">
           <nav>
             <ul class="header-menu">
-              <li class="active">
+              <li>
                 <a href="#">HOME</a>
               </li>
               <li>
@@ -46,10 +46,10 @@
                 <a href="#">VIVE MEZCAL</a>
               </li>
               <li>
-                <a href="#">TIENDA</a>
+                <a href="tienda.html">TIENDA</a>
               </li>
               <li>
-                <a href="#">MIXOLOGÍA</a>
+                <a href="mixologia.html">MIXOLOGÍA</a>
               </li>
             </ul>
           </nav>
@@ -474,33 +474,35 @@
       <div class="empty-lg-130 empty-md-100 empty-sm-60 empty-xs-40"></div>
     </section>
 
-    <footer class="footer footer-style-1 type-2 page-style-7">
-      <div class="empty-sm-60 empty-xs-40"></div>
-      <div class="container">
-        <a href="#">
-          <img src="images/logotype-footer.svg" class="footer-logo" alt="footer-logo">
-        </a>        
-      </div>
-      <div class="empty-sm-60 empty-xs-40"></div>
-      <div class="copyright text-center">
-        <div class="empty-sm-20 empty-xs-20"></div>
-        <div class="container white">
-          <span><span class="love"><></span> with <span class="love">♥</span> by <a href="https://bluecamp.com.mx">BlueCamp</a></span>
-        </div>
-        <div class="empty-sm-20 empty-xs-20"></div>
-      </div>
-    </footer>
+  </div>
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/all.js"></script>
-    <script src="js/ScrollMagic.min.js"></script>
-    <script src="js/TweenMax.min.js"></script>
-    <script src="js/animation.gsap.min.js"></script>
-    <script src="js/parallax.js"></script>
-    <script src="js/skrollr.min.js"></script>
-    <script>if(window.innerWidth > 720){
-      skrollr.init();
-    };</script>
+  <footer class="footer footer-style-1 type-2 page-style-7">
+    <div class="empty-sm-60 empty-xs-40"></div>
+    <div class="container">
+      <a href="#">
+        <img src="images/logotype-footer.svg" class="footer-logo" alt="footer-logo">
+      </a>        
+    </div>
+    <div class="empty-sm-60 empty-xs-40"></div>
+    <div class="copyright text-center">
+      <div class="empty-sm-20 empty-xs-20"></div>
+      <div class="container white">
+        <span><span class="love"><></span> with <span class="love">♥</span> by <a href="https://bluecamp.com.mx">BlueCamp</a></span>
+      </div>
+      <div class="empty-sm-20 empty-xs-20"></div>
+    </div>
+  </footer>
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/all.js"></script>
+  <script src="js/ScrollMagic.min.js"></script>
+  <script src="js/TweenMax.min.js"></script>
+  <script src="js/animation.gsap.min.js"></script>
+  <script src="js/parallax.js"></script>
+  <script src="js/skrollr.min.js"></script>
+  <script>if(window.innerWidth > 720){
+    skrollr.init();
+  };</script>
 
 </body>
 
