--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="mezcales.html">MEZCALES</a>
               </li>
               <li>
-                <a href="#">VIVE MEZCAL</a>
+                <a href="vive-mezcal.html">VIVE MEZCAL</a>
               </li>
               <li>
                 <a href="mixologia.html">MIXOLOGÍA</a>
@@ -72,10 +72,10 @@
         <div class="keyart_layer parallax" id="keyart-1" data-speed="22"></div> <!-- 12.5 -->
         <div class="keyart_layer parallax logo-layer" id="keyart-2" data-speed="11"></div> <!-- 25.0 -->
         <!-- <div class="keyart_layer parallax" id="keyart-3" data-speed="36"></div>  -->
-        <div class="keyart_layer parallax" id="keyart-4" data-speed="46"></div> 
-        <div class="keyart_layer parallax" id="keyart-5" data-speed="56"></div> <!-- 62.5 -->
-        <div class="keyart_layer parallax" id="keyart-6" data-speed="69"></div> <!-- 75.0 -->
-        <div class="keyart_layer front-layer" id="keyart-7" data-speed="79"></div>
+        <div class="keyart_layer parallax" id="keyart-3" data-speed="46"></div> 
+        <div class="keyart_layer parallax" id="keyart-4" data-speed="56"></div> <!-- 62.5 -->
+        <div class="keyart_layer parallax" id="keyart-5" data-speed="69"></div> <!-- 75.0 -->
+        <div class="keyart_layer front-layer" id="keyart-6" data-speed="79"></div>
       </div>
     </section>
 
