--- a/distribuidor.html
+++ b/distribuidor.html
@@ -46,7 +46,7 @@
                 <a href="mezcales.html">MEZCALES</a>
               </li>
               <li>
-                <a href="#">VIVE MEZCAL</a>
+                <a href="vive-mezcal.html">VIVE MEZCAL</a>
               </li>
               <li>
                 <a href="mixologia.html">MIXOLOGÍA</a>
