--- a/tienda/detalle.html
+++ b/tienda/detalle.html
@@ -135,7 +135,7 @@
                 <a href="../mezcales.html">MEZCALES</a>
               </li>
               <li>
-                <a href="#">VIVE MEZCAL</a>
+                <a href="../vive-mezcal.html">VIVE MEZCAL</a>
               </li>
               <li>
                 <a href="../mixologia.html">MIXOLOGÍA</a>
